@@ -35,7 +35,7 @@
 <target name="copy.check">
  <dependset>
   <srcfilelist dir="${src}" files="*.hrc"/>
-  <targetfilelist dir="${bin}" files="*.hrc"/>
+  <targetfilelist dir="${bin}" files="${bin}/xsieve.hrc"/>
  </dependset>
 </target>
 
