@@ -6,6 +6,7 @@ $Date$
   New:
     - No dependencies on php binaries when building HRC base
     - java policy simple syntax
+    - 4mirror: xsieve, wsdl
 
 
 Date: 2005/04/06 13:41:01
